# wprs

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  Cargo.toml  Cranky.toml  Cross.toml  Dockerfile  README.md  build.rs  deny.toml  rustfmt.toml  wprs
.cargo/: config.toml
.github/workflows/: nightly.yml  presubmit.yml  scorecard.yml
benches/: image_compression.rs  prefix_sum.rs  serialize.rs
debian/: changelog  install
examples/: wprsd_demo.rs
hooks/: pre-commit
package/: wprsd.service
package/arch/: Dockerfile  PKGBUILD.in  build.sh
package/brew/: Dockerfile  build.sh  wprs.rb.in
package/deb/: Dockerfile  build.sh  control
package/debian/: 50-wprsd.preset  rules
package/nix/: Dockerfile  build.sh  flake.nix
package/python/: pyproject.toml
package/python/wprs/: __init__.py  cli.py
package/rpm/: Dockerfile  build.sh
scripts/: package.sh
src/: arc_slice.rs  args.rs  buffer_pointer.rs  channel_utils.rs  client_utils.rs  compositor_utils.rs  config.rs  constants.rs  control_server.rs  error_utils.rs  fallible_entry.rs  filtering.rs  lib.rs  prefix_sum.rs  prelude.rs  sharding_compression.rs  tracy_allocator.rs  transpose.rs  utils.rs  vec4u8.rs
src/client/: backend.rs  config.rs  mod.rs  notification_handlers.rs  server_handlers.rs  smithay_handlers.rs  subsurface.rs  xdg_shell.rs
src/client/backends/: mod.rs
src/client/backends/wayland/: backend.rs  mod.rs  sctk.rs  server_handlers.rs  smithay_handlers.rs  subsurface.rs  xdg_shell.rs
src/client/backends/winit_pixels/: mod.rs
src/client/backends/winit_wgpu/: mod.rs  shader.wgsl
src/dbus/: mod.rs
src/protocols/: mod.rs
src/protocols/wprs/: framing.rs  geometry.rs  mod.rs  wayland.rs  xdg_shell.rs
src/protocols/wprs/core/: handshake.rs  mod.rs
src/serialization/: geometry.rs  mod.rs  tuple.rs  wayland.rs  xdg_shell.rs
src/server/: client_handlers.rs  config.rs  mod.rs  smithay_handlers.rs
src/server/backends/: mod.rs
src/server/backends/macos/: fullscreen.rs  window.rs
src/server/backends/mock/: mod.rs  patterns.rs
src/server/backends/wayland/: backend.rs  client_handlers.rs  mod.rs  smithay_handlers.rs  xwayland_handlers.rs
src/server/backends/windows/: fullscreen.rs  mod.rs  window.rs
src/server/backends/x11/: mod.rs  x11.rs
src/server/backends/x11/xwayland_xdg_shell/: compositor.rs  decoration.rs  mod.rs  wmname.rs
src/server/runtime/: backend.rs  mod.rs  run_loop.rs
src/simd/: avx.rs  avx2.rs  mod.rs  sse2.rs  sse2_base.rs  sse41.rs  ssse3.rs
src/utils/: channel.rs  client.rs  compositor.rs  core.rs  error.rs  mod.rs
src/xwayland_xdg_shell/: client.rs  compositor.rs  decoration.rs  mod.rs  xwayland.rs
tests/: tests.rs
tests/compile_fail/: buffer_pointer.rs  buffer_pointer.stderr  infallible_sender.rs  infallible_sender.stderr
wprs-common/: Cargo.toml
wprs-common/src/: filtering.rs  lib.rs  transpose.rs
wprs-metrics-protocol/: Cargo.toml
wprs-metrics-protocol/src/: lib.rs  metrics.rs
wprs-protocol/: Cargo.toml  build.rs
wprs-protocol/src/: arc_slice.rs  channel_utils.rs  lib.rs  sharding_compression.rs
wprs-protocol/src/serialization/: geometry.rs  mod.rs  wayland.rs  xdg_shell.rs
