[package]
name = "wprs"
version = "0.1.0"
authors = ["Nicolas Avrutin <rasputin@google.com>"]
license = "Apache-2.0"
edition = "2021"
build = "build.rs"

[profile.release-with-symbols]
inherits = "release"
debug = true

[profile.release-lto]
inherits = "release-with-symbols"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.86"
arrayref = "0.3.7"
bimap = "0.6.3"
bpaf = "0.9.12"
bytemuck = { version = "1.16.0", features = ["extern_crate_alloc"] }
crossbeam-channel = "0.5.15"
divbuf = "0.4.0"
enum-as-inner = "0.6.0"
fallible-iterator = "0.3.0"
home = "0.5.9"
itertools = "0.13.0"
lagoon = { version = "0.1.3", features = ["scope"] }
nix = { version = "0.29.0", features = ["fs", "socket"] }
num_enum = "0.7.2"
optional_struct = "0.5.2"
rkyv = { version = "0.8.8" }
ron = "0.8.1"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
smithay = { git = "https://github.com/Smithay/smithay.git", default-features = false, features = [
    "desktop",
    "xwayland",
    "wayland_frontend",
] }
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git" }
static_assertions = "1.1.0"
sysctl = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }
tracing-tracy = { version = "0.11.0", optional = true, features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = { version = "0.17.0", optional = true, features = [
    "only-localhost",
    "ondemand",
] }
whoami = "1.5.1"
x11rb = "0.13.1"
zstd = { version = "0.13.1" }

[build-dependencies]
merkle_hash = "3.6.1"

[features]
# Enables exporting data to the Tracy profiler.
# NOTE: opens a port on localhost.
# NOTE: breaks client reconnection due to sigpipe handling.
tracy = ["dep:tracy-client", "dep:tracing-tracy"]
# Enables memory allocation tracking for tracy. NOTE: severely decreases
# allocation performance.
tracy-allocator = ["tracy"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
png = "0.17.13"
proptest = "1.4.0"
trybuild = "1.0.96"

[[bench]]
name = "prefix_sum"
harness = false

# TODO: Fix bench
# [[bench]]
# name = "image_compression"
# harness = false

[[bench]]
name = "serialize"
harness = false
