[package]
name = "wprs"
version = "0.1.0"
authors = ["Nicolas Avrutin <rasputin@google.com>"]
license = "Apache-2.0"
edition = "2024"
build = "build.rs"

[profile.release-with-symbols]
inherits = "release"
debug = true

[profile.release-lto]
inherits = "release-with-symbols"
lto = true
codegen-units = 1

[profile.bench]
inherits = "release-lto"

[dependencies]
anyhow = "1.0.99"
bimap = "0.6.3"
bytemuck = { version = "1.23.2", features = ["extern_crate_alloc"] }
bpaf = "0.9"
calloop = { version = "0.14.3", features = ["signals"] }
crossbeam-channel = "0.5.15"
divbuf = "0.4.1"
enum-as-inner = "0.6.1"
fallible-iterator = "0.3.0"
home = "0.5.11"
itertools = "0.14.0"
lagoon = { version = "0.1.3", features = ["scope"] }
nix = { version = "0.30.1", features = ["fs", "socket", "mman"] }
num_enum = "0.7.4"
rkyv = { version = "0.8.11" }
ron = "0.11.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
smithay = { version = "0.7", default-features = false, features = [
    "desktop",
    "xwayland",
    "wayland_frontend",
], optional = true }
smithay-client-toolkit = { version = "0.20", optional = true }
static_assertions = "1.1.0"
sysctl = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["parking_lot"] }
tracing-tracy = { version = "0.11.4", optional = true, features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = { version = "0.18.2", optional = true, features = [
    "only-localhost",
    "ondemand",
] }
whoami = "1.6.1"
x11rb = { version = "0.13.2", features = ["shm"] }
zstd = { version = "0.13.3" }

[build-dependencies]
merkle_hash = "3.8.0"

[features]
# Build `wprsc` with the Wayland backend by default.
default = ["wayland-client"]

# By default, avoid pulling in platform-specific Wayland compositor/client code.
# Enable the components you need explicitly.

# Build and enable the Wayland server/compositor (`wprsd`, and server-side helpers).
server = ["dep:smithay"]

# Build and enable the Wayland client backend for `wprsc` (SCTK-based).
wayland-client = ["dep:smithay", "dep:smithay-client-toolkit"]

# Enables exporting data to the Tracy profiler.
# NOTE: opens a port on localhost.
# NOTE: breaks client reconnection due to sigpipe handling.
tracy = ["dep:tracy-client", "dep:tracing-tracy"]
# Enables memory allocation tracking for tracy. NOTE: severely decreases
# allocation performance.
tracy-allocator = ["tracy"]

[[bin]]
name = "wprsd"

[[bin]]
name = "wprsc"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
png = "0.18.0"
proptest = "1.7.0"
trybuild = "1.0.110"

# To run this benchmark, uncomment the block below and specify a directory of
# images:
# WPRS_BENCH_IMAGE_DIR=/path/to/images cargo bench --bench image_compression
#
# A recommended set of images is the screenshot_web directory from
# qoi_benchmark_suite.tar on https://qoiformat.org/benchmark/. screenshot_web
# was chosen because it is relatively representative of general application
# GUIs, the kind of applications wprs is likely to be used with.

[[bench]]
name = "image_compression"
harness = false

[[bench]]
name = "serialize"
harness = false
