[package]
name = "wprs-common"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.0", features = ["extern_crate_alloc"] }
itertools = "0.13.0"
lagoon = { version = "0.1.3", features = ["scope"] }
nix = { version = "0.29.0", features = ["fs", "socket"] }
rkyv = { version = "0.8.8" }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
smithay = { git = "https://github.com/Smithay/smithay.git", default-features = false, features = [
    "desktop",
    "xwayland",
    "wayland_frontend",
] }
static_assertions = "1.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }
tracing-tracy = { version = "0.11.0", optional = true, features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = { version = "0.17.0", optional = true, features = [
    "only-localhost",
    "ondemand",
] }

[features]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]

[dev-dependencies]
proptest = "1.4.0"
trybuild = "1.0.96"
