[package]
name = "wprs-protocol"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
wprs-common = { path = "../wprs-common" }

anyhow = "1.0.86"
arrayref = "0.3.7"
crossbeam-channel = "0.5.13"
divbuf = "0.4.0"
enum-as-inner = "0.6.0"
fallible-iterator = "0.3.0"
nix = { version = "0.29.0", features = ["fs", "socket"] }
num_enum = "0.7.2"
rkyv = { version = "0.8.8" }
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.117"
smithay = { git = "https://github.com/Smithay/smithay.git", default-features = false, features = [
    "desktop",
    "xwayland",
    "wayland_frontend",
] }
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git" }
sysctl = "0.6.0"
tracing = "0.1.40"
tracing-tracy = { version = "0.11.0", optional = true, features = [
    "only-localhost",
    "ondemand",
] }
tracy-client = { version = "0.17.0", optional = true, features = [
    "only-localhost",
    "ondemand",
] }
zstd = { version = "0.13.1" }

[build-dependencies]
merkle_hash = "3.6.1"

[features]
tracy = ["dep:tracy-client", "dep:tracing-tracy"]
